# ipymolstar

./: .gitignore  LICENSE  README.md  example.ipynb  package-lock.json  package.json  pyproject.toml
.github/workflows/: build.yml  pypi_main.yml  pypi_test.yml
assets/: 6vsb.bcif
examples/: click_events.py  molviewspec_widget.py  mouseover_highlight.py  mwe_solara.py  panel_app.py  pyshiny_example.py  rainbow_residues.py  solara_app.py
examples/highlight_expanded/: app.py  pycafe_linkgen.py  requirements.txt  requirements_view.txt  viewer.py
examples/molviewspec/: double_hooke.py  solara_cameracontrol.py
examples/pdbemolstar/: mouseover_highlight.py  pyhdx_secb_deltaG.csv  rainbow_residues.py  solara_app.py
js/: molviewspec.js  widget.css  widget.js
src/ipymolstar/: __init__.py  molstar.css  molviewspec.py  molviewspec_widget.js  pane.py  panel.py  pdbe-dark.css  pdbe-light.css  pdbemolstar.py  widget.css  widget.js  widget.py
src/ipymolstar/panel/: __init__.py  pdbemolstar.py
src/ipymolstar/static/: molviewspec.css  pdbe-dark.css  pdbe-light.css  pdbemolstar.js  widget.css  widget.js
tests/: _test_notebook.ipynb  test_notebook.ipynb  test_unit.py
