[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ipymolstar"
license = {file = "LICENSE"}
dependencies = ["anywidget"]
readme = "README.md"
description = "PDBeMolstar as anywidget"
keywords = ["molstar", "anywidget"]
dynamic = ['version']

[tool.hatch.version]
path = "src/ipymolstar/__init__.py"

[project.optional-dependencies]
dev = ["watchfiles", "jupyterlab"]

# automatically add the dev feature to the default env (e.g., hatch shell)
[tool.hatch.envs.default]
features = ["dev"]


[tool.hatch.build]
only-packages = true
artifacts = ["src/ipymolstar/*"]


