[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ipymolstar"
license = { file = "LICENSE" }
dependencies = ["anywidget"]
readme = "README.md"
description = "PDBeMolstar as anywidget"
keywords = ["molstar", "anywidget"]
dynamic = ['version']

[tool.hatch.version]
path = "src/ipymolstar/__init__.py"

[tool.hatch.build]
only-packages = true
artifacts = ["src/ipymolstar/static/*"]
exclude = ["**/.venv*"]
